dark mode fixed and some legal checks :p

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -77,6 +77,7 @@
 }
 
 .aboutTitle {
+  color: rgb(231, 235, 238);
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 1.5rem;
